@@ -7384,6 +7384,8 @@ fold_unary (enum tree_code code, tree type, tree op0)
 	     - the final type is a pointer type and the initial type not
 	     - the initial type is a pointer to an array and the final type
 	       not.  */
+	  /* Java pointer type conversions generate checks in some
+	     cases, so we explicitly disallow this optimization.  */
 	  if (! inside_float && ! inter_float && ! final_float
 	      && ! inside_vec && ! inter_vec && ! final_vec
 	      && (inter_prec >= inside_prec || inter_prec >= final_prec)
@@ -7399,7 +7401,8 @@ fold_unary (enum tree_code code, tree type, tree op0)
 	      && final_ptr == inside_ptr
 	      && ! (inside_ptr
 		    && TREE_CODE (TREE_TYPE (inside_type)) == ARRAY_TYPE
-		    && TREE_CODE (TREE_TYPE (type)) != ARRAY_TYPE))
+		    && TREE_CODE (TREE_TYPE (type)) != ARRAY_TYPE)
+	      && ! (final_ptr && strcmp (lang_hooks.name, "GNU Java") == 0))
 	    return fold_build1 (code, type, TREE_OPERAND (op0, 0));
 	}
 
