@@ -1,3 +1,11 @@
+2006-09-01  Andrew Haley  <aph@redhat.com>
+
+	* Makefile.in: Rebuild.
+	* sources.am: Rebuild.
+	* java/lang/natThreadLocal.cc: New file.
+	* java/lang/ThreadLocal.java: Lotsa hacks.
+	* Makefile.am: Add java/lang/natThreadLocal.cc.
+
 2006-09-01  Gary Benson  <gbenson@redhat.com>
 
 	* java/net/InetAddress.java (getLocalHost): Refactor to avoid
